spacing issue resolved

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,5 +1,6 @@
 .hero-container .hero-wrapper {
-  max-width: unset;
+  max-width: 1920px;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -36,7 +37,7 @@
 
     .hero-content {
       margin: 0;
-      padding: 55px 48px;
+      padding: 55px 128px;
     }
   }
 
@@ -55,7 +56,6 @@
     font-size: 42px;
     line-height: 57px;
   }
-
 
   .hero img {
     object-fit: cover;
@@ -101,9 +101,6 @@
       background: linear-gradient(90deg, var(--white) 87.56%, rgb(0 0 0 / 0%) 100%);
     }
   }
-
- 
-
 }
 
 /* 2 column variation */
@@ -112,9 +109,7 @@
   background-color: #f1f1f1;
   
   .hero>div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: flex;   
     gap: 30px;
   }
 
@@ -124,16 +119,16 @@
 
   .herocol-1 {
     width: 50%;
-    margin: 48px;
+    margin: 60px 48px 60px 128px;
   }
 
   .herocol-1 img {
     width: 528px;
-    margin: 32px 0;
+   margin: 32px 0;
   }
 
   .herocol-1 p{
-    margin: 0;
+    margin: 0;    
   }
 
   .herocol-1 h1, h3{
@@ -163,7 +158,7 @@
 
   .herocol-2 {
     width: 50%;
-    margin-right: 48px;
+    margin-right: 80px;
   }
 
   .herocol-2 img {
@@ -172,9 +167,11 @@
 
   .herocol-2 blockquote p{
     font-size: 12px;
-    width: 300px;
+    width: 288px;
     text-align: right;
-    float: right;
+    position: absolute;
+    right: 80px;
+    bottom: 16px;
   }
 
   @media (width <= 768px){
