--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,36 +1,24 @@
 /* stylelint-disable max-line-length */
 @font-face {
-  font-family: roboto-condensed;
+  font-family: noto-sans-hebrew;
   font-style: normal;
-  font-weight: 700;
+  font-weight: bold;
   font-display: swap;
-  src: url('../fonts/roboto-condensed-bold.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('../fonts/NotoSansHebrew-Bold.woff2') format('woff2');  
 }
 
 @font-face {
-  font-family: roboto;
+  font-family: noto-sans-hebrew;
   font-style: normal;
-  font-weight: 700;
+  font-weight: normal;
   font-display: swap;
-  src: url('../fonts/roboto-bold.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('../fonts/NotoSansHebrew-Regular.woff2') format('woff2'); 
 }
 
 @font-face {
-  font-family: roboto;
+  font-family: noto-sans-hebrew;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 800;
   font-display: swap;
-  src: url('../fonts/roboto-medium.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: roboto;
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url('../fonts/roboto-regular.woff2') format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('../fonts/NotoSansHebrew-ExtraBold.woff2') format('woff2');
 }
